--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interaktiv Reseguide</title>
+    <title>Kärnresa</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" type="image/x-icon" href="../misc/Icon.png">
+    
 </head>
 <body>
     <header id="header">
