--- a/html/home.html
+++ b/html/home.html
@@ -1,57 +1,64 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kärnresa</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/home.css">
     <link rel="icon" type="image/x-icon" href="../misc/Icon.png">
-    
 </head>
+
 <body>
     <header id="header">
         <h1>Kärnresa</h1>
         <p>Du förtjänar det bästa!</p>
+        <nav class="nav">
+            <div class="menu-button">&#9776;</div>
+            <div class="menu">
+                <a href="home.html">Home</a>
+                <a href="travels.html">Travels</a>
+                <a href="contact.html">Contact</a>
+            </div>
+        </nav>
     </header>
-    
+
     <section class="hero">
         <div class="hero-content">
             <button onclick="visaTips()">Få ett resetips</button>
-            <p id="reseTips">Klicka på knappen för att få ett tips!</p>
+            <p class="clearertext" id="reseTips">Klicka på knappen för att få ett tips!</p>
         </div>
     </section>
 
     <section class="destination-grid">
-        <div class="destination-box">
-            <img src="../misc/travel-background1.jpeg" alt="Paris">
+        <a href="travels.html#Paris" class="destination-box">
+            <img src="../misc/charldegal.jpg" alt="Paris">
             <h3>Paris</h3>
             <p>Besök Paris och njut av Eiffeltornet!</p>
-        </div>
-        <div class="destination-box">
+        </a>
+        <a href="travels.html#Maldiverna" class="destination-box">
             <img src="../misc/travel-background1.jpeg" alt="Maldiverna">
             <h3>Maldiverna</h3>
             <p>Upptäck de fantastiska stränderna i Maldiverna!</p>
-        </div>
-        <div class="destination-box">
+        </a>
+        <a href="travels.html#Tokyo" class="destination-box">
             <img src="../misc/travel-background1.jpeg" alt="Tokyo">
             <h3>Tokyo</h3>
             <p>Utforska Tokyo och dess futuristiska stadsbild!</p>
-        </div>
-        <div class="destination-box">
+        </a>
+        <a href="travels.html#Alperna" class="destination-box">
             <img src="../misc/travel-background1.jpeg" alt="Alperna">
             <h3>Alperna</h3>
             <p>Vandra genom de vackra Alperna!</p>
-        </div>
-        <div class="destination-box">
-            <img src="../misc/travel-background1.jpeg" alt="Rom">
+        </a>
+        <a href="travels.html#Rom" class="destination-box">
+            <img src="../misc/fontanatrevi.jpg" alt="Rom">
             <h3>Rom</h3>
             <p>Njut av kulturen och maten i Rom!</p>
-        </div>
+        </a>
     </section>
 
     <footer>
-        <p>&copy; 2025 Reseguiden. Alla rättigheter förbehållna.</p>
+        <p class="clearertext">&copy; 2025 Kärnresa. Alla rättigheter förbehållna.</p>
     </footer>
 
     <script src="../javascript/script.js"></script>
