added pictures and new website
About website added, text later.

--- a/html/about.html
+++ b/html/about.html
@@ -37,29 +37,24 @@
             <p>Besök Paris och njut av Eiffeltornet!</p>
         </a>
         <a href="travels.html#Maldiverna" class="destination-box">
-            <img src="../misc/travel-background1.jpeg" alt="MaldivernaBild">
+            <img src="../misc/travel-background1.jpeg" alt="Maldiverna">
             <h3>Maldiverna</h3>
             <p>Upptäck de fantastiska stränderna i Maldiverna!</p>
         </a>
         <a href="travels.html#Tokyo" class="destination-box">
-            <img src="../misc/tokyotower.jpg" alt="TokyoBild">
+            <img src="../misc/travel-background1.jpeg" alt="Tokyo">
             <h3>Tokyo</h3>
             <p>Utforska Tokyo och dess futuristiska stadsbild!</p>
         </a>
         <a href="travels.html#Alperna" class="destination-box">
-            <img src="../misc/alps.jpg" alt="AlpernaBild">
+            <img src="../misc/travel-background1.jpeg" alt="Alperna">
             <h3>Alperna</h3>
             <p>Vandra genom de vackra Alperna!</p>
         </a>
         <a href="travels.html#Rom" class="destination-box">
-            <img src="../misc/fontanatrevi.jpg" alt="RomBild">
+            <img src="../misc/fontanatrevi.jpg" alt="Rom">
             <h3>Rom</h3>
             <p>Njut av kulturen och maten i Rom!</p>
-        </a>
-        <a href="travels.html#Rio" class="destination-box">
-            <img src="../misc/theredeemer.jpg" alt="RioBild">
-            <h3>Rio de Janeiro</h3>
-            <p>Testa på hängflygning i Rio de Janeiro!</p>
         </a>
     </section>
 
