--- a/html/contact.html
+++ b/html/contact.html
@@ -20,6 +20,7 @@
                 <a href="home.html">Home</a>
                 <a href="travels.html">Travels</a>
                 <a href="contact.html">Contact</a>
+                <a href="about.html">About</a>
             </div>
         </nav>
     </header>
