--- a/html/travels.html
+++ b/html/travels.html
@@ -18,6 +18,7 @@
                 <a href="home.html">Home</a>
                 <a href="travels.html">Travels</a>
                 <a href="contact.html">Contact</a>
+                <a href="about.html">About</a>
             </div>
         </nav>
     </header>
@@ -68,6 +69,17 @@
         </p>
         <p>blablablablal</p>
         <p>bla</p> 
+
+
+        <br id="Rio"></br>
+        <br></br>
+        <h1>Rio de Janeiro</h1>
+        <p>
+            bleh bleh bleh blu blu blu bluh blu Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium molestias, laudantium ex consectetur voluptates harum recusandae, aliquid illum repellendus quasi, repudiandae explicabo? Molestiae voluptate, ullam nostrum dolorem quo nihil doloremque excepturi. Assumenda, corrupti saepe illum natus officia reprehenderit in pariatur iusto rerum vero quis enim nostrum id inventore ut perferendis ipsum minus hic quos praesentium esse nesciunt repudiandae accusamus exercitationem. Iste commodi excepturi, sunt asperiores natus eveniet culpa aliquid quis eaque dolores fugit vitae cum deserunt! Vero quos maiores aliquid quod doloribus dolorum ex. Quos quam, at ut autem mollitia in nulla debitis, illum aliquid ab, minus vitae nostrum quibusdam.
+        </p>
+        <p>blablablablal</p>
+        <p>bla</p> 
+
     </section>
 
     <footer>
