--- a/html/travels.html
+++ b/html/travels.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kärnresa</title>
+    <meta name="description" content="Kärnresa - Din partner för minnesvärda resor. Upptäck Paris, Maldiverna, Tokyo och mer!">
+    <meta name="keywords" content="resor, Paris, Maldiverna, Tokyo, Alperna, Rom, Rio de Janeiro">
+    <meta name="author" content="Kärnresa">
+    <title>Kärnresa - Resor</title>
     <link rel="stylesheet" href="../css/travels.css">
     <link rel="icon" type="image/x-icon" href="../misc/Icon.png">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
@@ -27,63 +31,187 @@
         <br id="Paris"></br>
         <br></br>
         <h1>Paris</h1>
-        <p>
-            bleh bleh bleh blu blu blu bluh blu Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium molestias, laudantium ex consectetur voluptates harum recusandae, aliquid illum repellendus quasi, repudiandae explicabo? Molestiae voluptate, ullam nostrum dolorem quo nihil doloremque excepturi. Assumenda, corrupti saepe illum natus officia reprehenderit in pariatur iusto rerum vero quis enim nostrum id inventore ut perferendis ipsum minus hic quos praesentium esse nesciunt repudiandae accusamus exercitationem. Iste commodi excepturi, sunt asperiores natus eveniet culpa aliquid quis eaque dolores fugit vitae cum deserunt! Vero quos maiores aliquid quod doloribus dolorum ex. Quos quam, at ut autem mollitia in nulla debitis, illum aliquid ab, minus vitae nostrum quibusdam.
-        </p>
-        <p>blablablablal</p>
-        <p>bla</p> 
+        <div class="destination-content">
+            <img src="../misc/charldegal.jpg" alt="Paris" class="destination-image">
+            <div class="destination-info">
+                <h3>Romantikens stad</h3>
+                <p>
+                    Paris, kärlekens och ljusets stad, är en plats som måste upplevas minst en gång i livet. Promenera längs Seine-floden i skymningen, beundra Eiffeltornet när det glittrar i natten, och njut av en croissant på ett mysigt kafé medan du betraktar stadens puls.
+                </p>
+                <p>
+                    Vår Parisresa inkluderar besök till de mest ikoniska sevärdheterna som Louvren, Notre-Dame och Montmartre, men vi tar dig också till dolda pärlor där lokalbefolkningen tillbringar sin tid. Upptäck charmiga bokhandlar i Quartier Latin, smaka på världens bästa macarons, och upplev fransk vinkultur på en privat provsmakning.
+                </p>
+                <p>
+                    För konstälskare erbjuder vi specialguidningar på Musée d'Orsay och Centre Pompidou, medan modeentusiaster kan njuta av vår exklusiva shopping-tur längs Champs-Élysées och de trendigaste boutiquerna i Le Marais.
+                </p>
+                <div class="destination-facts">
+                    <h4>Snabbfakta:</h4>
+                    <ul>
+                        <li><strong>Bästa resesäsong:</strong> April-Juni, September-Oktober</li>
+                        <li><strong>Flygtid från Stockholm:</strong> Ca 2,5 timmar</li>
+                        <li><strong>Språk:</strong> Franska (engelska talas på turistområden)</li>
+                        <li><strong>Valuta:</strong> Euro (€)</li>
+                        <li><strong>Måste uppleva:</strong> Solnedgång från Sacré-Cœur, båttur på Seine</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
         <br id="Maldiverna"></br>
         <br></br>
         <h1>Maldiverna</h1>
-        <p>
-            bleh bleh bleh blu blu blu bluh blu Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium molestias, laudantium ex consectetur voluptates harum recusandae, aliquid illum repellendus quasi, repudiandae explicabo? Molestiae voluptate, ullam nostrum dolorem quo nihil doloremque excepturi. Assumenda, corrupti saepe illum natus officia reprehenderit in pariatur iusto rerum vero quis enim nostrum id inventore ut perferendis ipsum minus hic quos praesentium esse nesciunt repudiandae accusamus exercitationem. Iste commodi excepturi, sunt asperiores natus eveniet culpa aliquid quis eaque dolores fugit vitae cum deserunt! Vero quos maiores aliquid quod doloribus dolorum ex. Quos quam, at ut autem mollitia in nulla debitis, illum aliquid ab, minus vitae nostrum quibusdam.
-        </p>
-        <p>blablablablal</p>
-        <p>bla</p> 
+        <div class="destination-content">
+            <img src="../misc/maldives.jpg" alt="Maldiverna" class="destination-image">
+            <div class="destination-info">
+                <h3>Paradis på jorden</h3>
+                <p>
+                    Maldiverna är ett paradis med kristallklart vatten, vita sandstränder och övervattensbungalower som svävar över korallrev. Här kan du koppla av i total lyx, med personlig service och exklusiva upplevelser.
+                </p>
+                <p>
+                    Våra Maldiverna-paket inkluderar boende på handplockade lyxresorts där din egen villa har direkt tillgång till lagunen. Varje morgon kan du vakna upp till havets symfoni och njuta av frukost serverad på din privata terrass över vattnet.
+                </p>
+                <p>
+                    För äventyrslystna erbjuder vi snorkling och dykning bland färgglada korallrev, där du kan simma tillsammans med mantor, sköldpaddor och exotiska fiskar. Eller varför inte prova på paddelsurfing, vindsurfing eller en romantisk solnedgångskryssning på en traditionell dhoni-båt?
+                </p>
+                <div class="destination-facts">
+                    <h4>Snabbfakta:</h4>
+                    <ul>
+                        <li><strong>Bästa resesäsong:</strong> November-April</li>
+                        <li><strong>Flygtid från Stockholm:</strong> Ca 12 timmar (med mellanlandning)</li>
+                        <li><strong>Språk:</strong> Dhivehi (engelska talas på resorts)</li>
+                        <li><strong>Valuta:</strong> Maldivisk rufiyaa (MVR), men USD accepteras överallt</li>
+                        <li><strong>Måste uppleva:</strong> Snorkling vid Hanifaru Bay, nattlig badning med bioluminiscerande plankton</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
         <br id="Tokyo"></br>
         <br></br>
         <h1>Tokyo</h1>
-        <p>
-            bleh bleh bleh blu blu blu bluh blu Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium molestias, laudantium ex consectetur voluptates harum recusandae, aliquid illum repellendus quasi, repudiandae explicabo? Molestiae voluptate, ullam nostrum dolorem quo nihil doloremque excepturi. Assumenda, corrupti saepe illum natus officia reprehenderit in pariatur iusto rerum vero quis enim nostrum id inventore ut perferendis ipsum minus hic quos praesentium esse nesciunt repudiandae accusamus exercitationem. Iste commodi excepturi, sunt asperiores natus eveniet culpa aliquid quis eaque dolores fugit vitae cum deserunt! Vero quos maiores aliquid quod doloribus dolorum ex. Quos quam, at ut autem mollitia in nulla debitis, illum aliquid ab, minus vitae nostrum quibusdam.
-        </p>
-        <p>blablablablal</p>
-        <p>bla</p> 
+        <div class="destination-content">
+            <img src="../misc/tokyotower.jpg" alt="Tokyo" class="destination-image">
+            <div class="destination-info">
+                <h3>Framtidens metropol</h3>
+                <p>
+                    Tokyo är en stad där tradition möter hypermodernitet. Här kan du besöka uråldriga tempel på förmiddagen, shoppa i futuristiska elektronikkvarter på eftermiddagen och avsluta dagen med ett Michelin-stjärnigt måltid i världsklass.
+                </p>
+                <p>
+                    Vår Tokyo-upplevelse tar dig från de pulserande gatorna i Shibuya med sitt berömda övergångsställe, till den fridfulla Meiji-helgedomen omgiven av skog mitt i staden. Du får uppleva den unika popkulturen i Harajuku, den sofistikerade shoppingen i Ginza och det autentiska nattlivet i Shinjuku Golden Gai.
+                </p>
+                <p>
+                    För matälskare erbjuder vi exklusiva matupplevelser: allt från sushi-frukost på den legendariska Tsukiji-marknaden till sake-provning med en mästerbryggare. Våra lokala guider tar dig till de bästa izakaya-barerna där du kan smälta in bland lokalbefolkningen och uppleva äkta japansk gästfrihet.
+                </p>
+                <div class="destination-facts">
+                    <h4>Snabbfakta:</h4>
+                    <ul>
+                        <li><strong>Bästa resesäsong:</strong> Mars-Maj (körsbärsblomning), Oktober-November (höstlöv)</li>
+                        <li><strong>Flygtid från Stockholm:</strong> Ca 11 timmar (direktflyg)</li>
+                        <li><strong>Språk:</strong> Japanska (begränsad engelska)</li>
+                        <li><strong>Valuta:</strong> Japansk yen (¥)</li>
+                        <li><strong>Måste uppleva:</strong> Robotrestaurangen i Shinjuku, utsikten från Tokyo Skytree</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
         <br id="Alperna"></br>
         <br></br>
         <h1>Alperna</h1>
-        <p>
-            bleh bleh bleh blu blu blu bluh blu Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium molestias, laudantium ex consectetur voluptates harum recusandae, aliquid illum repellendus quasi, repudiandae explicabo? Molestiae voluptate, ullam nostrum dolorem quo nihil doloremque excepturi. Assumenda, corrupti saepe illum natus officia reprehenderit in pariatur iusto rerum vero quis enim nostrum id inventore ut perferendis ipsum minus hic quos praesentium esse nesciunt repudiandae accusamus exercitationem. Iste commodi excepturi, sunt asperiores natus eveniet culpa aliquid quis eaque dolores fugit vitae cum deserunt! Vero quos maiores aliquid quod doloribus dolorum ex. Quos quam, at ut autem mollitia in nulla debitis, illum aliquid ab, minus vitae nostrum quibusdam.
-        </p>
-        <p>blablablablal</p>
-        <p>bla</p> 
-        
+        <div class="destination-content">
+            <img src="../misc/alps.jpg" alt="Alperna" class="destination-image">
+            <div class="destination-info">
+                <h3>Majestätiska berglandskap</h3>
+                <p>
+                    Alperna erbjuder en oförglömlig kombination av dramatiska berg, kristallklara sjöar och pittoreska byar. Oavsett om du söker adrenalinfylld skidåkning, fridfulla vandringar eller välmående spa-upplevelser, har Alperna något för alla.
+                </p>
+                <p>
+                    Under vintern kan du njuta av världsklassig skidåkning i legendariska orter som Chamonix, Zermatt och St. Moritz. Våra alppaket inkluderar skidpass, privata skidlektioner och tillgång till exklusiva afterski-upplevelser där du kan varva ner efter en dag i backarna.
+                </p>
+                <p>
+                    Sommartid förvandlas Alperna till ett paradis för vandring, cykling och äventyrssporter. Upptäck blomstrande alpängar, svalkande bergssjöar och traditionella bergsbyar där tiden tycks ha stått stilla. Efter en dag utomhus kan du koppla av på en termisk spa med utsikt över bergstopparna.
+                </p>
+                <div class="destination-facts">
+                    <h4>Snabbfakta:</h4>
+                    <ul>
+                        <li><strong>Bästa resesäsong:</strong> December-Mars (vinter), Juni-September (sommar)</li>
+                        <li><strong>Flygtid från Stockholm:</strong> Ca 2,5-3 timmar</li>
+                        <li><strong>Språk:</strong> Tyska, franska, italienska (beroende på region)</li>
+                        <li><strong>Valuta:</strong> Euro (€) eller schweiziska franc (CHF)</li>
+                        <li><strong>Måste uppleva:</strong> Glaciärexkursion på Aletschglaciären, osttasting i en traditionell alpby</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
         
         <br id="Rom"></br>
         <br></br>
         <h1>Rom</h1>
-        <p>
-            bleh bleh bleh blu blu blu bluh blu Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium molestias, laudantium ex consectetur voluptates harum recusandae, aliquid illum repellendus quasi, repudiandae explicabo? Molestiae voluptate, ullam nostrum dolorem quo nihil doloremque excepturi. Assumenda, corrupti saepe illum natus officia reprehenderit in pariatur iusto rerum vero quis enim nostrum id inventore ut perferendis ipsum minus hic quos praesentium esse nesciunt repudiandae accusamus exercitationem. Iste commodi excepturi, sunt asperiores natus eveniet culpa aliquid quis eaque dolores fugit vitae cum deserunt! Vero quos maiores aliquid quod doloribus dolorum ex. Quos quam, at ut autem mollitia in nulla debitis, illum aliquid ab, minus vitae nostrum quibusdam.
-        </p>
-        <p>blablablablal</p>
-        <p>bla</p> 
-
+        <div class="destination-content">
+            <img src="../misc/fontanatrevi.jpg" alt="Rom" class="destination-image">
+            <div class="destination-info">
+                <h3>Den eviga staden</h3>
+                <p>
+                    Rom, den eviga staden, är ett levande museum där varje gata och torg berättar en historia som sträcker sig över tre årtusenden. Här finns några av världens mest ikoniska sevärdheter: Colosseum, Vatikanen, Spanska trappan och Fontana di Trevi.
+                </p>
+                <p>
+                    Våra Rom-paket erbjuder exklusiva VIP-turer till Vatikanmuseerna före ordinarie öppettider, så att du kan uppleva Sixtinska kapellet i lugn och ro. Vi tar dig också till det antika Rom med privata guidningar av Colosseum och Forum Romanum, där du får lära dig om imperiets storhet och fall.
+                </p>
+                <p>
+                    För matälskare erbjuder vi kulinariska vandringsturer genom Trasteveres charmiga gränder, där du får prova på autentisk romersk mat, från krämig carbonara till krispig pizza al taglio. Avsluta dagen med en espresso på ett lokalt café och titta på världen passera förbi - precis som romarna har gjort i århundraden.
+                </p>
+                <div class="destination-facts">
+                    <h4>Snabbfakta:</h4>
+                    <ul>
+                        <li><strong>Bästa resesäsong:</strong> April-Maj, September-Oktober</li>
+                        <li><strong>Flygtid från Stockholm:</strong> Ca 3 timmar</li>
+                        <li><strong>Språk:</strong> Italienska (engelska talas i turistområden)</li>
+                        <li><strong>Valuta:</strong> Euro (€)</li>
+                        <li><strong>Måste uppleva:</strong> Solnedgång från Gianicolo-kullen, glass (gelato) från en autentisk gelateria</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
         <br id="Rio"></br>
         <br></br>
         <h1>Rio de Janeiro</h1>
-        <p>
-            bleh bleh bleh blu blu blu bluh blu Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium molestias, laudantium ex consectetur voluptates harum recusandae, aliquid illum repellendus quasi, repudiandae explicabo? Molestiae voluptate, ullam nostrum dolorem quo nihil doloremque excepturi. Assumenda, corrupti saepe illum natus officia reprehenderit in pariatur iusto rerum vero quis enim nostrum id inventore ut perferendis ipsum minus hic quos praesentium esse nesciunt repudiandae accusamus exercitationem. Iste commodi excepturi, sunt asperiores natus eveniet culpa aliquid quis eaque dolores fugit vitae cum deserunt! Vero quos maiores aliquid quod doloribus dolorum ex. Quos quam, at ut autem mollitia in nulla debitis, illum aliquid ab, minus vitae nostrum quibusdam.
-        </p>
-        <p>blablablablal</p>
-        <p>bla</p> 
-
+        <div class="destination-content">
+            <img src="../misc/theredeemer.jpg" alt="Rio de Janeiro" class="destination-image">
+            <div class="destination-info">
+                <h3>Den underbara staden</h3>
+                <p>
+                    Rio de Janeiro, känd som "Cidade Maravilhosa" (Den underbara staden), är en metropol där dramatiska berg möter gyllene stränder, och där musik och dans är en del av vardagen. Från den ikoniska Kristusstatyn på Corcovado till den pulserande Copacabana-stranden, är Rio en fest för sinnena.
+                </p>
+                <p>
+                    Våra Rio-paket inkluderar besök till stadens mest spektakulära utsiktsplatser: Sockertoppen (Pão de Açúcar) med dess svävande linbana och Kristusstatyn med sin panoramautsikt över hela bukten. För äventyrslystna erbjuder vi hängflygning över staden, där du kan sväva som en fågel mellan bergen och havet.
+                </p>
+                <p>
+                    Upplev den autentiska brasilianska kulturen genom sambadanslektioner, capoeira-uppvisningar och besök på lokala favelas som genomgått positiv social transformation. Avsluta dagen med en caipirinha på stranden medan du beundrar den magiska solnedgången över Atlanten.
+                </p>
+                <div class="destination-facts">
+                    <h4>Snabbfakta:</h4>
+                    <ul>
+                        <li><strong>Bästa resesäsong:</strong> Maj-Oktober (torrsäsong)</li>
+                        <li><strong>Flygtid från Stockholm:</strong> Ca 15 timmar (med mellanlandning)</li>
+                        <li><strong>Språk:</strong> Portugisiska</li>
+                        <li><strong>Valuta:</strong> Brasiliansk real (R$)</li>
+                        <li><strong>Måste uppleva:</strong> Fotbollsmatch på Maracanã-stadion, solbad på Ipanema-stranden</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
-        <p class="clearertext">&copy; 2025 Kärnresa. Alla rättigheter förbehållna.</p>
+        <div class="footer-content">
+            <p class="clearertext">&copy; 2025 Kärnresa. Alla rättigheter förbehållna.</p>
+            <div class="social-links">
+                <a href="https://facebook.com" target="_blank">Facebook</a>
+                <a href="https://twitter.com" target="_blank">Twitter</a>
+                <a href="https://instagram.com" target="_blank">Instagram</a>
+            </div>
+        </div>
     </footer>
 
     <script src="../javascript/script.js"></script>
