--- a/html/home.html
+++ b/html/home.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kärnresa - Din partner för minnesvärda resor. Upptäck Paris, Maldiverna, Tokyo och mer!">
+    <meta name="keywords" content="resor, Paris, Maldiverna, Tokyo, Alperna, Rom, Rio de Janeiro">
+    <meta name="author" content="Kärnresa">
     <title>Kärnresa</title>
     <link rel="stylesheet" href="../css/home.css">
     <link rel="icon" type="image/x-icon" href="../misc/Icon.png">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
@@ -37,7 +41,7 @@
             <p>Besök Paris och njut av Eiffeltornet!</p>
         </a>
         <a href="travels.html#Maldiverna" class="destination-box">
-            <img src="../misc/travel-background1.jpeg" alt="MaldivernaBild">
+            <img src="../misc/travel-background1.jpg" alt="MaldivernaBild">
             <h3>Maldiverna</h3>
             <p>Upptäck de fantastiska stränderna i Maldiverna!</p>
         </a>
@@ -64,7 +68,14 @@
     </section>
 
     <footer>
-        <p class="clearertext">&copy; 2025 Kärnresa. Alla rättigheter förbehållna.</p>
+        <div class="footer-content">
+            <p class="clearertext">&copy; 2025 Kärnresa. Alla rättigheter förbehållna.</p>
+            <div class="social-links">
+                <a href="https://facebook.com" target="_blank">Facebook</a>
+                <a href="https://twitter.com" target="_blank">Twitter</a>
+                <a href="https://instagram.com" target="_blank">Instagram</a>
+            </div>
+        </div>
     </footer>
 
     <script src="../javascript/script.js"></script>
