--- a/html/home.html
+++ b/html/home.html
@@ -41,7 +41,7 @@
             <p>Besök Paris och njut av Eiffeltornet!</p>
         </a>
         <a href="travels.html#Maldiverna" class="destination-box">
-            <img src="../misc/travel-background1.jpg" alt="MaldivernaBild">
+            <img src="../misc/maldives.jpg" alt="MaldivernaBild">
             <h3>Maldiverna</h3>
             <p>Upptäck de fantastiska stränderna i Maldiverna!</p>
         </a>
