--- a/html/travels.html
+++ b/html/travels.html
@@ -20,7 +20,7 @@
         <nav class="nav">
             <div class="menu-button">&#9776;</div>
             <div class="menu">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="travels.html">Travels</a>
                 <a href="contact.html">Contact</a>
                 <a href="about.html">About</a>
