--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="resor, Paris, Maldiverna, Tokyo, Alperna, Rom, Rio de Janeiro">
     <meta name="author" content="Kärnresa">
     <title>Kärnresa</title>
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="icon" type="image/x-icon" href="../misc/Icon.png">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -19,7 +19,7 @@
         <nav class="nav">
             <div class="menu-button">&#9776;</div>
             <div class="menu">
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="travels.html">Travels</a>
                 <a href="contact.html">Contact</a>
                 <a href="about.html">About</a>
